# pytcl

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
LICENSES/: Apache-2.0.txt
src/pytcl/: __init__.py  call.py  error.py  execute.py  execute.tcl  pytcl.py  receiver.py  sender.py  value.py  vivado.py
tests/: test_tclsh.py  test_vivado.py
tests/hdl/: dut.sv
